# browserbase-langchain-agent

./: .env.example  .gitignore  README.md  agent.py  phase1_loader.py  pyproject.toml  requirements.txt  run.py  smoke_test.py  tools.py
.github/workflows/: ci.yml
api/: main.py  models.py
frontend/: app.js  index.html  styles.css
src/browser_agent/: __init__.py  agent.py  config.py  logger.py  tools.py
tests/: test_agent.py  test_tools.py
