[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "browserbase-langchain-agent"
version = "1.0.0"
description = "AI-powered autonomous web browsing agent using Browserbase, LangChain, LangGraph and Stagehand"
requires-python = ">=3.10"
dependencies = [
    "browserbase>=1.8.0",
    "stagehand>=3.20.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=1.0.0",
    "beautifulsoup4>=4.14.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.4.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/browser_agent"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
